--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,11 +23,12 @@ dependencies {
     api('com.airbnb.android:lottie:2.5.4') { transitive = false }
     implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation ('com.ticketmaster.presence:secure-entry:1.0.4@aar'){
+    implementation('com.ticketmaster.presence:secure-entry:1.0.4@aar') {
         transitive = true
     }
 
 
+    implementation 'com.google.android.libraries.places:places:1.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.volley:volley:1.1.1'
@@ -40,6 +41,7 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
@@ -48,13 +50,13 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.6'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     implementation 'com.google.firebase:firebase-storage:16.0.5'
     implementation 'com.google.firebase:firebase-database:16.0.6'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-
 
     implementation 'com.firebaseui:firebase-ui-database:4.3.1'
     implementation 'com.google.android.libraries.places:places:1.0.0'
