--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -37,7 +40,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ProfileActivity" />
+        <activity
+            android:name=".ProfileActivity"
+            android:parentActivityName=".MapsActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -53,8 +58,12 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".UpdateProfile" />
-        <activity android:name=".MarkerOptions" />
+        <activity
+            android:name=".UpdateProfile"
+            android:parentActivityName=".MapsActivity" />
+        <activity
+            android:name=".MarkerOptions"
+            android:parentActivityName=".MapsActivity" />
         <activity
             android:name=".SaveLocation"
             android:parentActivityName=".MapsActivity" />
@@ -70,11 +79,17 @@
         <activity android:name=".ProfilePage" />
         <activity
             android:name=".FriendMapsActivity"
-            android:label="@string/title_activity_friend_maps" />
+            android:label="@string/title_activity_friend_maps"
+            android:parentActivityName=".MapsActivity" />
         <activity android:name=".AllFriendsMapsActivity" />
         <activity
             android:name=".NearbyLocations"
-            android:label="@string/title_activity_nearby_locations" />
+            android:label="@string/title_activity_nearby_locations"
+            android:parentActivityName=".MapsActivity" />
+        <activity
+            android:name=".NavigationBarActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ListOnline"></activity>
     </application>
 
 </manifest>
