--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
@@ -57,10 +57,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.google.android.libraries.places:places:1.1.0'
 
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'com.firebaseui:firebase-ui-database:4.3.1'
-    implementation 'com.google.android.libraries.places:places:1.0.0'
-    implementation 'com.google.android.gms:play-services-places:16.0.0'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.4.+'
 
 
